--- a/package.json
+++ b/package.json
@@ -1,41 +1,29 @@
 {
-  "name": "rising-tide-boat-works",
-  "private": true,
-  "version": "1.0.0",
-  "main": "package.json",
-  "license": "UNLICENSED",
+  "name": "rtbw-website-sanity-nextjs",
+  "description": "",
   "scripts": {
-    "dev": "sanity dev",
-    "start": "sanity start",
-    "build": "sanity build",
-    "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:next": "npm run dev --workspace=frontend",
+    "dev:studio": "npm run dev --workspace=studio",
+    "import-sample-data": "cd studio && sanity dataset import sample-data.tar.gz --replace"
   },
   "keywords": [
-    "sanity"
+    "Sanity",
+    "Next.js",
+    "Headless CMS",
+    "Visual Editing",
+    "Live Content API (LCAPI)",
+    "Real-time"
   ],
-  "dependencies": {
-    "@sanity/vision": "^3.91.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sanity": "^3.91.0",
-    "sanity-plugin-media": "^3.0.3",
-    "styled-components": "^6.1.15"
+  "bugs": {
+    "url": ""
   },
+  "homepage": "",
+  "workspaces": [
+    "studio",
+    "frontend"
+  ],
   "devDependencies": {
-    "@sanity/eslint-config-studio": "^5.0.2",
-    "@types/react": "^18.0.25",
-    "eslint": "^9.9.0",
-    "prettier": "^3.0.2",
-    "react-icons": "^5.5.0",
-    "sanity-plugin-computed-field": "^2.0.2",
-    "sanity-plugin-documents-pane": "^2.4.0",
-    "typescript": "^5.1.6"
-  },
-  "prettier": {
-    "semi": false,
-    "printWidth": 100,
-    "bracketSpacing": false,
-    "singleQuote": true
+    "npm-run-all": "^4.1.5"
   }
 }
