--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
     "dev:next": "npm run dev --workspace=frontend",
-    "dev:studio": "npm run dev --workspace=studio",
+    "dev:studio": "npm run dev --workspace=studio"
   },
   "keywords": [
   ],
-  "homepage": "",
+  "bugs": {
+    "url": ""
+  },
   "workspaces": [
     "studio",
     "frontend"
