--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
+    "dompurify": "^3.2.6",
     "next": "15.3.3",
     "next-sanity": "^9.12.0",
     "react": "^19.0.0",
@@ -17,11 +18,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "jsdom": "^26.1.0",
     "typescript": "^5"
   }
 }
