--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,19 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@react-three/drei": "^10.5.2",
+    "@react-three/fiber": "^9.2.0",
     "@types/dompurify": "^3.0.5",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.178.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "jsdom": "^26.1.0",
     "sass": "^1.89.2",
+    "three": "^0.178.0",
     "typescript": "^5"
   }
 }
