--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,6 +6,8 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "noEmit": true,
     "module": "preserve",
     "isolatedModules": true,
