--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/types": "^4.12.0",
+    "@sanity/ui": "^3.1.11",
     "next": "15.3.3",
     "next-sanity": "^9.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-is": "^19.2.0",
+    "sanity": "^4.12.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
