--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.14.4",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/types": "^4.12.0",
